<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Hello">Hello</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">IITD UVD Robot</string>
    <string name="app_string_name">IITD UVD Robot</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="connection_text">Trying to reach master…</string>
    <string name="coordinates">Touch at some point in the canvas</string>
    <string name="default_imu_frame_id">publishing</string>
    <string name="default_imu_hint">Default IMU frame ID</string>
    <string name="default_location_frame_id">publishing</string>
    <string name="default_location_hint">Default location frame ID</string>
    <string name="full_app_name">IITD UVD Robot dv0.0.11</string>
    <string name="joystick_topic">cmd_vel</string>
    <string name="label_imu_frame_id">IMU Frame ID</string>
    <string name="label_location_frame_id">Location Frame ID</string>
    <string name="master_uri_hint">http://localhost:11311/</string>
    <string name="new_master">New Public Master</string>
    <string name="new_private_master">New Private Master</string>
    <string name="qr_code">Read QRCode</string>
    <string name="search_menu_title">Search</string>
    <string name="select_interface">Select network interface</string>
    <string name="show_advanced">Show advanced options</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_app">Kill</string>
    <string name="uri_text">Master URI:</string>
    <string name="use_master">Connect</string>
</resources>
